Add some features for message communication.